[FIX]sap.m.MessageStrip: break-word scroll issue fixed on IE 11
Long words in a message strip
with small width are no longer causing a scrollbar to appear in IE11.

BCP: 1970226045

--- a/src/sap.m/src/sap/m/themes/base/MessageStrip.less
+++ b/src/sap.m/src/sap/m/themes/base/MessageStrip.less
@@ -30,6 +30,11 @@ html[data-sap-ui-animation='on'] {
 	}
 }
 
+html[data-sap-ui-browser='ie11'] .sapMMsgStripMessage {
+	word-wrap: break-word;
+}
+
+
 .sapMMsgStripClosing {
 	opacity: 0;
 }
